api定義の修正

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Copy this file to .env.local (which is gitignored) and fill in real values
-VITE_API_ENDPOINT=https://us-central1-kvitanco-163006.cloudfunctions.net/openapi/invoice
+VITE_API_ENDPOINT=https://rqopkcftnc.execute-api.ap-northeast-1.amazonaws.com/prod/invoice/
 VITE_SHOP_ID=your-shop-id
 VITE_API_KEY=your-api-key
 VITE_TAX_MODE=inclusive
